--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ background:#b8294c;
   width: 960px; /* multiplier par le margin px*/
 }
 
+/* Boite à image*/
 .window {
   position: relative;
   width: 150px;
@@ -151,13 +152,18 @@ background:#b8294c;
   border-radius: 8px;
   margin: 5px;
   overflow: hidden;
-
+  box-shadow: 0 10px 20px rgba(1, 7, 24, 0.611);
+}
+.window:hover {
+  z-index:3;
+  transform:scale(1.3) rotate(5deg);
+  transition:1s;
 }
 
 .txtbox {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: right;
+  align-items: top;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -177,10 +183,40 @@ background:#b8294c;
   z-index: 1;
 }
 
+
 /* Zoom image dans l'block */
 .img-box img{
   display:block;
   width: 120%;
+}
+
+/* full screen */
+.full-img{
+  width:100%;
+  height:100vh;
+  background: rgba(0,0,0,0.9);
+  position:fixed;
+  top: 0;
+  left:0;
+  display:none;
+  align-items: center;
+  justify-content: center;
+  z-index:100;
+}
+
+/* Full screen center */
+.full-img img{
+  width:90%;
+  max-width:500px;
+}
+
+.full-img span{
+  position:absolute;
+  top:15%;
+  right:15%;
+  font-size:30px;
+  color: #fff;
+  cursor:pointer;
 }
 
 .txtbox.active {
@@ -191,5 +227,5 @@ background:#b8294c;
 .txtbox:hover {
   opacity: 0;
   transform: translateX(100px) rotate(35deg);
-  transform:matrix3d(50px);
+
 }  
