--- a/lightbox.css
+++ b/lightbox.css
@@ -2,6 +2,7 @@ body.lb-disable-scrolling {
   overflow: hidden;
 }
 
+/* Overlay */
 .lightboxOverlay {
   position: absolute;
   top: 0;
@@ -9,7 +10,7 @@ body.lb-disable-scrolling {
   z-index: 9999;
   background-color: black;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-  opacity: 0.8;
+  opacity: 0.9;
   display: none;
 }
 
@@ -29,10 +30,10 @@ body.lb-disable-scrolling {
   height: auto;
   max-width: inherit;
   max-height: none;
-  border-radius: 3px;
+  border-radius: 30px;
 
   /* Image border */
-  border: 4px solid white;
+  border: 8px solid white;
 }
 
 .lightbox a img {
@@ -45,10 +46,10 @@ body.lb-disable-scrolling {
   width: 250px;
   height: 250px;
   margin: 0 auto;
-  border-radius: 4px;
+  border-radius: 30px;
 
-  /* Background color behind image.
-     This is visible during transitions. */
+  /* Background color derrière l'image
+     C'est visible durant la transition. */
   background-color: white;
 }
 
@@ -178,7 +179,7 @@ body.lb-disable-scrolling {
   clear: left;
   padding-bottom: 1em;
   font-size: 12px;
-  color: #999999;
+  color: #00000000;
 }
 
 .lb-data .lb-close {
