--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -50,7 +50,7 @@ nav{
   z-index: 10;
   left:0;
   right:0;
-  background:rgb(4, 0, 2);
+  background:rgb(5, 0, 0);
 }
 
 nav ul {
@@ -64,7 +64,7 @@ nav ul {
 
 /* Nav espacement */
 nav li {
-  padding: 1.5rem;
+  padding: 0.5rem;
 }
 
 /* Nav design */
@@ -76,10 +76,10 @@ nav a {
   max-width: 12rem;
   color: white;
   margin: 2rem auto;
-  padding: 1rem;
-  border-radius: 4px;
-  box-shadow: 0 10px 5px rgb(0, 0, 0);
-  background-image: linear-gradient(#6753ea,#3cddc4);
+  padding: 1.9rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 11px rgb(0, 0, 0);
+  background-image: linear-gradient(#000000,#ffffff);
   position: relative;
   z-index: 0;
 }
