--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -15,7 +15,7 @@ body {
 
 /* Taille de l'image */
 .swiper {
-  border: 8px solid black;
+  border: 5px solid rgb(0, 0, 0);
 
   width: 100%;
   height: 91%;
