--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 :root {
   --trans: rgba(0, 0, 0, 0.759);
 }
@@ -122,7 +123,6 @@ nav ul li a:hover,.demo-nav ul li a:focus-within {
   position: relative;
   width: 150px;
   height: 150px;
-  background: red;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -130,6 +130,8 @@ nav ul li a:hover,.demo-nav ul li a:focus-within {
   margin: 5px;
   overflow: hidden;
   box-shadow: 0 10px 20px rgba(1, 7, 24, 0.611);
+
+
 }
 .window:hover {
   z-index:3;
@@ -137,30 +139,58 @@ nav ul li a:hover,.demo-nav ul li a:focus-within {
   transition:1s;
 }
 
-.txtbox {
+
+/* DÉBUT Filter */
+.section-filter{
+  padding:20px;
+  width: 1280px;
+  margin:40px auto;
+}
+
+/* Filtre de gauche à droite */
+.section-filter ul{
+  display:flex;
+  margin-bottom:10px;
+}
+
+/* Améliore le rendu des filtres */
+.section-filter ul li{
+  list-style:none;
+  background:#eee;
+  padding:8px 20px;
+  margin:5px;
+  letter-spacing: 1px;
+  cursor:pointer;
+}
+
+/* Ajouter la couleur à la class active */
+.section-filter ul li.active{
+    background:#03a9f4;
+    color: #fff;
+}
+
+.calendar{
   display: flex;
-  justify-content: right;
-  align-items: top;
-  height: 100%;
-  width: 100%;
+  flex-wrap: wrap;
+}
+
+.calendar .window{
+  position: relative;
+  width: 300px;
+  height:300px;
+  margin:5px;
+}
+
+.calendar .window img{
   position: absolute;
-  z-index: 2;
-  transition: 0.5s;
+  top:0%;
+  left:0%;
+  width:100%;
+  height:100%;
+  object-fit: cover;
 }
 
-/* Numero */
-.txtbox span {
-  color: #fff;
-  font-size: 40px;
-}
-
-.txtbox.trans { background: var(--trans);}
-
-.img-box{
-  z-index: 1;
-
-}
-
+/* FIN FILTER */
 
 /* Zoom image dans l'block */
 .img-box img{
@@ -168,34 +198,6 @@ nav ul li a:hover,.demo-nav ul li a:focus-within {
   width: 120%;
 }
 
-/* full screen */
-.full-img{
-  width:100%;
-  height:100vh;
-  background: rgba(0,0,0,0.9);
-  position:fixed;
-  top: 0;
-  left:0;
-  display:none;
-  align-items: center;
-  justify-content: center;
-  z-index:100;
-}
-
-/* Full screen center */
-.full-img img{
-  width:90%;
-  max-width:500px;
-}
-
-.full-img span{
-  position:absolute;
-  top:15%;
-  right:15%;
-  font-size:30px;
-  color: #fff;
-  cursor:pointer;
-}
 
 .txtbox.active {
   opacity: 0;
