--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,16 @@ background-color: rgb(174, 174, 112);
 font-family: "Poppins", sans-serif;
 }
 
+#logo {
+  font-size:20px;
+  margin-right:522px;
+  color: white;
+  letter-spacing:2px;
+  text-shadow:2px 2px 5px;
+}
+
+
+
 html, body, .section {
   height: 100%;
 }
@@ -46,7 +56,7 @@ html {
 nav{
   position:fixed;
   top: 0;
-  padding-top:20px;
+  padding-top:10px;
   height:100px;
   z-index: 10;
   left:0;
@@ -59,13 +69,13 @@ nav ul {
   padding: 0px;
   list-style-type: none;
   display: flex;
-  width: 100%;
+  width: 65%;
   justify-content: center;	
 }
 
 /* Nav espacement */
 nav li {
-  padding: 0.1rem;
+  padding: 0.2rem;
 }
 
 /* Nav design */
@@ -77,10 +87,10 @@ nav a {
   max-width: 12rem;
   color: white;
   margin: 2rem auto;
-  padding: 1.9rem;
-  border-radius: 10px;
-  box-shadow: 0 2px 11px rgb(0, 0, 0);
-  background-image: linear-gradient(#000000,#ffffff);
+  padding: 1.0rem;
+  border-radius: 4px;
+  box-shadow: 0 1px 15px rgb(0, 0, 0);
+  background-image: linear-gradient(#e71111bd,#ffffff);
   position: relative;
   z-index: 0;
 }
@@ -151,6 +161,7 @@ nav ul li a:hover,.demo-nav ul li a:focus-within {
 .section-filter ul{
   display:flex;
   margin-bottom:10px;
+  
 }
 
 /* Améliore le rendu des filtres */
