--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -16,15 +16,13 @@ body {
 /* Taille de l'image */
 .swiper {
   border: 5px solid rgb(0, 0, 0);
-  width: 100%;
-  height: 91%;
+  width: 50%;
+  height: 90%;
   margin-top:100px;
 
 }
 
-
 .swiper-slide {
-  
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -44,11 +42,12 @@ body {
   align-items: center;
 }
 
+/* Taille de l'image */
 .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit:cover;
 }
 
 .swiper {
