--- a/CSS/event.css
+++ b/CSS/event.css
@@ -7,11 +7,12 @@
 	box-shadow: 0 15px 30px 1px rgba(128, 128, 128, 0.31);
 	background: rgba(255, 255, 255, 0.90);
 	text-align: center;
+	justify-content: center;
 	border-radius: 10px;
 	overflow: hidden;
 	margin: 5em auto;
 	height: 350px;
-	width: 500px;
+	width: 500px;	
 }
 
 /* 	Détail sur le produit */
