--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -8,7 +8,7 @@ a.s3d  {
   clear: both;
   opacity: .8;
   border-radius:3px;
-  box-shadow:0 4px 5px rgba(0,0,0,.3);
+  box-shadow:0 5px 5px rgba(0,0,0,.3);
   display: inline-block !important;
   font: 700 13px/36px 'Arial', Helvetica, Clean, sans-serif;
   height: 26px;
@@ -16,7 +16,7 @@ a.s3d  {
   padding: 0 10px 11px;
   position: relative;
   text-decoration: none;
-  text-shadow: 0 1px 1px rgba(255,255,255,.35);
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.35);
   width: 125px;
   
   transition: width 0.1s ease-in-out, opacity 0.1s ease-in-out, margin-left 0.1s ease-in-out, transform .3s ease-out;
@@ -25,12 +25,11 @@ a.s3d  {
 /* Hover sur les contacts */
 a.s3d:hover {
   opacity: 1;
-  width: 160px;
-  margin-left: -10px;
+  width: 200px;
+  transition:0.2s;
+
 }
 
-/* transform au click */
-a.s3d:active { transform: translateX(200px); }
 
 /* Facebook */
 a.facebook {
@@ -62,9 +61,9 @@ a.instagram {
 .icons {
   bottom: 2px;
   display: block;
-  height: 26px;
+  height: 27px;
   position: absolute;
-  right: 16.5px;
+  right: 15.7px;
   width: 10px;
   font-size: 2.5em;
 }
