--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -30,13 +30,12 @@ a.s3d:hover {
 
 }
 
-
 /* Facebook */
 a.facebook {
     background: #4669ab;
     background: linear-gradient(#4669ab, #304886);
     border-top: 1px solid #8ea4cd;
-    color: rgba(21,31,53,1);
+    color: rgb(255, 255, 255);
     text-shadow: 0 1px 1px rgba(255,255,255,.35);
   }
 
@@ -45,7 +44,7 @@ a.twitter {
   background: #65acc8;
   background: linear-gradient(#65acc8, #4586ae);
   border-top: 1px solid #a1cdde;
-  color: rgba(25,45,55,.9);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 /* Instagram */
@@ -53,7 +52,7 @@ a.instagram {
     background: #4fdd20;
     background: linear-gradient(#7f2299, #dc5e16);
     border-top: 1px solid #8ea4cd;
-    color: rgba(21,31,53,1);
+    color: rgb(255, 255, 255);
     text-shadow: 0 1px 1px rgba(255,255,255,.35);
   }
 
@@ -66,15 +65,4 @@ a.instagram {
   right: 16.5px;
   width: 10px;
   font-size: 2.5em;
-
 }
-
-
-
-
-
-
-
-
-
-
