--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -17,8 +17,8 @@ body {
 .swiper {
   border: 5px solid rgb(0, 0, 0);
   width: 50%;
-  height: 90%;
-  margin-top:100px;
+  height: 100%;
+  margin-bottom:41px;
 
 }
 
