--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -67,3 +67,13 @@ a.instagram {
   width: 10px;
   font-size: 2.5em;
 }
+
+.section-5 {
+  display: flex;
+  flex-wrap:center;
+  overflow-x: auto;
+  margin-bottom: 20px;
+  flex-direction: column-reverse;
+  align-items:center;
+
+}
