ajout du panier

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -77,3 +77,10 @@ a.instagram {
   align-items:center;
 
 }
+
+/* Panier icon */
+.basket-color{
+  color:white;
+  align-items:center;
+  justify-content: center; 
+}
