--- a/CSS/video.css
+++ b/CSS/video.css
@@ -3,6 +3,7 @@
     padding-bottom: 56.25%; /* 16:9 */
     height: 0;
     overflow: hidden;
+    z-index:-1;
   }
   
   .container-video iframe {
@@ -11,4 +12,20 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index:-1;
+  }
+
+  .text-video{
+    font-size:xx-large;
+    text-shadow: 0 0 10px;
+    display:flex;
+    flex-direction:row;
+    width:100%;
+    color:white;
+    z-index:100;
+    align-items:center;
+    margin-top:200px;
+    justify-content: center;
+    position: absolute;
+    top: 0;
   }
