--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -17,9 +17,8 @@ body {
 .swiper {
   border: 5px solid rgb(0, 0, 0);
   width: 50%;
-  height: 100%;
-  margin-bottom:41px;
-
+  height: 92%;
+  margin-top:30px;
 }
 
 .swiper-slide {
@@ -53,4 +52,15 @@ body {
 .swiper {
   margin-left: auto;
   margin-right: auto;
+}
+
+/* Texte */
+.swiper-slide p {
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  color: white;
+  font-size: 24px;
 }
